chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -5735,3 +5735,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
