chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -5733,3 +5733,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
