--- a/index.html
+++ b/index.html
@@ -2805,3 +2805,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
