--- a/index.html
+++ b/index.html
@@ -5731,3 +5731,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
