--- a/index.html
+++ b/index.html
@@ -2809,3 +2809,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
