refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -5741,3 +5741,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
