--- a/index.html
+++ b/index.html
@@ -5745,3 +5745,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
