refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -2831,3 +2831,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
