--- a/index.html
+++ b/index.html
@@ -2829,3 +2829,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
