--- a/index.html
+++ b/index.html
@@ -5743,3 +5743,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
