--- a/index.html
+++ b/index.html
@@ -2833,3 +2833,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
