docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -5749,3 +5749,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
