refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -5747,3 +5747,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
