--- a/index.html
+++ b/index.html
@@ -5765,3 +5765,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
