--- a/index.html
+++ b/index.html
@@ -2855,3 +2855,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
