--- a/index.html
+++ b/index.html
@@ -5769,3 +5769,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
