perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -5767,3 +5767,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
