--- a/index.html
+++ b/index.html
@@ -2861,3 +2861,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
