test: add unit tests

--- a/index.html
+++ b/index.html
@@ -5773,3 +5773,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
