--- a/index.html
+++ b/index.html
@@ -5777,3 +5777,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
