--- a/index.html
+++ b/index.html
@@ -2857,3 +2857,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
