--- a/index.html
+++ b/index.html
@@ -2859,3 +2859,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
