--- a/index.html
+++ b/index.html
@@ -5775,3 +5775,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
