--- a/index.html
+++ b/index.html
@@ -2867,3 +2867,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
