--- a/index.html
+++ b/index.html
@@ -2871,3 +2871,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
