--- a/index.html
+++ b/index.html
@@ -2869,3 +2869,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
