test: add unit tests

--- a/index.html
+++ b/index.html
@@ -5789,3 +5789,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
