--- a/index.html
+++ b/index.html
@@ -2883,3 +2883,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
