--- a/index.html
+++ b/index.html
@@ -5795,3 +5795,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
