style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -2879,3 +2879,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
