chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -5787,3 +5787,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
