refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -5785,3 +5785,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
