--- a/index.html
+++ b/index.html
@@ -2881,3 +2881,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
