--- a/index.html
+++ b/index.html
@@ -5799,3 +5799,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
