--- a/index.html
+++ b/index.html
@@ -2885,3 +2885,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
