--- a/index.html
+++ b/index.html
@@ -5801,3 +5801,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
