--- a/index.html
+++ b/index.html
@@ -5805,3 +5805,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
