feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -2917,3 +2917,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
