style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -5831,3 +5831,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
