test: add unit tests

--- a/index.html
+++ b/index.html
@@ -5833,3 +5833,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
