--- a/index.html
+++ b/index.html
@@ -2919,3 +2919,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
