--- a/index.html
+++ b/index.html
@@ -2935,3 +2935,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
