refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -2933,3 +2933,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
