--- a/index.html
+++ b/index.html
@@ -2937,3 +2937,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
