--- a/index.html
+++ b/index.html
@@ -2939,3 +2939,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
