chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -5835,3 +5835,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
