--- a/index.html
+++ b/index.html
@@ -5837,3 +5837,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
