--- a/index.html
+++ b/index.html
@@ -5839,3 +5839,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
