docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -5845,3 +5845,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
