--- a/index.html
+++ b/index.html
@@ -5847,3 +5847,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
