--- a/index.html
+++ b/index.html
@@ -5849,3 +5849,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
