docs: update documentation

--- a/index.html
+++ b/index.html
@@ -5843,3 +5843,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
