--- a/index.html
+++ b/index.html
@@ -2969,3 +2969,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
