--- a/index.html
+++ b/index.html
@@ -2971,3 +2971,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
