--- a/index.html
+++ b/index.html
@@ -5861,3 +5861,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
