--- a/index.html
+++ b/index.html
@@ -5869,3 +5869,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
