--- a/index.html
+++ b/index.html
@@ -5871,3 +5871,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
