docs: update documentation

--- a/index.html
+++ b/index.html
@@ -2983,3 +2983,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
