docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -2981,3 +2981,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
