--- a/index.html
+++ b/index.html
@@ -5877,3 +5877,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
