--- a/index.html
+++ b/index.html
@@ -5879,3 +5879,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
