--- a/index.html
+++ b/index.html
@@ -2999,3 +2999,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
