style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -3003,3 +3003,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<script src="app.js"></script>
