feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -5905,3 +5905,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
