feat: add new feature 2024-11-19

--- a/index.html
+++ b/index.html
@@ -5903,3 +5903,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
