--- a/index.html
+++ b/index.html
@@ -3001,3 +3001,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
