--- a/index.html
+++ b/index.html
@@ -5915,3 +5915,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
