chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -5917,3 +5917,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
