--- a/index.html
+++ b/index.html
@@ -3023,3 +3023,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
