--- a/index.html
+++ b/index.html
@@ -5919,3 +5919,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
