--- a/index.html
+++ b/index.html
@@ -5923,3 +5923,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
