--- a/index.html
+++ b/index.html
@@ -3019,3 +3019,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
