--- a/index.html
+++ b/index.html
@@ -5921,3 +5921,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
