--- a/index.html
+++ b/index.html
@@ -3041,3 +3041,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
