--- a/index.html
+++ b/index.html
@@ -3039,3 +3039,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
