chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -3043,3 +3043,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
