--- a/index.html
+++ b/index.html
@@ -5931,3 +5931,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
