feat: add new feature 2024-11-24

--- a/index.html
+++ b/index.html
@@ -5933,3 +5933,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
