--- a/index.html
+++ b/index.html
@@ -3047,3 +3047,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
