feat: add new feature 2024-11-24

--- a/index.html
+++ b/index.html
@@ -3045,3 +3045,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
