fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -5929,3 +5929,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
