--- a/index.html
+++ b/index.html
@@ -5937,3 +5937,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
