--- a/index.html
+++ b/index.html
@@ -5935,3 +5935,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
