--- a/index.html
+++ b/index.html
@@ -5997,3 +5997,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
