--- a/index.html
+++ b/index.html
@@ -3111,3 +3111,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
