feat: add new feature 2024-12-05

--- a/index.html
+++ b/index.html
@@ -5999,3 +5999,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
