--- a/index.html
+++ b/index.html
@@ -3117,3 +3117,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
