--- a/index.html
+++ b/index.html
@@ -6001,3 +6001,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
