--- a/index.html
+++ b/index.html
@@ -3113,3 +3113,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
