refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -3115,3 +3115,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
