--- a/index.html
+++ b/index.html
@@ -3137,3 +3137,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
