--- a/index.html
+++ b/index.html
@@ -3129,3 +3129,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
