--- a/index.html
+++ b/index.html
@@ -3125,3 +3125,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
