test: add unit tests

--- a/index.html
+++ b/index.html
@@ -3127,3 +3127,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
