test: add unit tests

--- a/index.html
+++ b/index.html
@@ -6013,3 +6013,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
