--- a/index.html
+++ b/index.html
@@ -3143,3 +3143,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
