--- a/index.html
+++ b/index.html
@@ -3141,3 +3141,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
