--- a/index.html
+++ b/index.html
@@ -3139,3 +3139,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
