docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -6015,3 +6015,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
