style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -6021,3 +6021,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
