refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -3149,3 +3149,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
