--- a/index.html
+++ b/index.html
@@ -3151,3 +3151,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
