--- a/index.html
+++ b/index.html
@@ -6029,3 +6029,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
