--- a/index.html
+++ b/index.html
@@ -3145,3 +3145,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
