docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -3147,3 +3147,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
