--- a/index.html
+++ b/index.html
@@ -3167,3 +3167,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<link rel="stylesheet" href="styles.css">
