--- a/index.html
+++ b/index.html
@@ -3165,3 +3165,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
