--- a/index.html
+++ b/index.html
@@ -3163,3 +3163,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
