perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -3175,3 +3175,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
