--- a/index.html
+++ b/index.html
@@ -6045,3 +6045,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
