refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -3179,3 +3179,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
