perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -3177,3 +3177,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
