feat: add new feature 2024-12-12

--- a/index.html
+++ b/index.html
@@ -6043,3 +6043,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
