feat: add new feature 2024-12-12

--- a/index.html
+++ b/index.html
@@ -3171,3 +3171,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
