chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -6061,3 +6061,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
