--- a/index.html
+++ b/index.html
@@ -6055,3 +6055,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
