--- a/index.html
+++ b/index.html
@@ -6057,3 +6057,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
