feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -6059,3 +6059,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
