--- a/index.html
+++ b/index.html
@@ -6063,3 +6063,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
