--- a/index.html
+++ b/index.html
@@ -6053,3 +6053,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
