--- a/index.html
+++ b/index.html
@@ -3181,3 +3181,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
