--- a/index.html
+++ b/index.html
@@ -6065,3 +6065,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
