--- a/index.html
+++ b/index.html
@@ -3183,3 +3183,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
