docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -6069,3 +6069,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
