docs: update documentation

--- a/index.html
+++ b/index.html
@@ -3195,3 +3195,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
