--- a/index.html
+++ b/index.html
@@ -3193,3 +3193,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
