--- a/index.html
+++ b/index.html
@@ -6081,3 +6081,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
