--- a/index.html
+++ b/index.html
@@ -3191,3 +3191,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
