--- a/index.html
+++ b/index.html
@@ -3207,3 +3207,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
