--- a/index.html
+++ b/index.html
@@ -6089,3 +6089,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
