--- a/index.html
+++ b/index.html
@@ -3203,3 +3203,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
