--- a/index.html
+++ b/index.html
@@ -6097,3 +6097,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
