--- a/index.html
+++ b/index.html
@@ -6101,3 +6101,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
