feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -6095,3 +6095,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
