fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -6103,3 +6103,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
