--- a/index.html
+++ b/index.html
@@ -6123,3 +6123,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
