--- a/index.html
+++ b/index.html
@@ -3247,3 +3247,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
