refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -3249,3 +3249,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
