perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -6129,3 +6129,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
