--- a/index.html
+++ b/index.html
@@ -6133,3 +6133,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
