feat: add new feature 2024-12-25

--- a/index.html
+++ b/index.html
@@ -3257,3 +3257,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
