--- a/index.html
+++ b/index.html
@@ -3259,3 +3259,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
