--- a/index.html
+++ b/index.html
@@ -3261,3 +3261,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
