--- a/index.html
+++ b/index.html
@@ -6131,3 +6131,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
