--- a/index.html
+++ b/index.html
@@ -3265,3 +3265,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
