--- a/index.html
+++ b/index.html
@@ -3263,3 +3263,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
