--- a/index.html
+++ b/index.html
@@ -6161,3 +6161,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
