--- a/index.html
+++ b/index.html
@@ -6163,3 +6163,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
