style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -3289,3 +3289,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
