--- a/index.html
+++ b/index.html
@@ -3293,3 +3293,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
