perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -3291,3 +3291,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
