chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -3295,3 +3295,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
