--- a/index.html
+++ b/index.html
@@ -3321,3 +3321,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
