--- a/index.html
+++ b/index.html
@@ -3309,3 +3309,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
