fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -3339,3 +3339,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
