--- a/index.html
+++ b/index.html
@@ -3341,3 +3341,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
