--- a/index.html
+++ b/index.html
@@ -6195,3 +6195,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
