docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -6191,3 +6191,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
