--- a/index.html
+++ b/index.html
@@ -6201,3 +6201,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
