--- a/index.html
+++ b/index.html
@@ -6199,3 +6199,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
