--- a/index.html
+++ b/index.html
@@ -3371,3 +3371,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
