--- a/index.html
+++ b/index.html
@@ -3405,3 +3405,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
