--- a/index.html
+++ b/index.html
@@ -3401,3 +3401,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
