refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -6245,3 +6245,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
