--- a/index.html
+++ b/index.html
@@ -3403,3 +3403,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
