fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -6263,3 +6263,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
