docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -3427,3 +3427,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
