--- a/index.html
+++ b/index.html
@@ -3429,3 +3429,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
