--- a/index.html
+++ b/index.html
@@ -6265,3 +6265,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Improved accessibility -->
