--- a/index.html
+++ b/index.html
@@ -6273,3 +6273,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
