--- a/index.html
+++ b/index.html
@@ -3435,3 +3435,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
