refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -6269,3 +6269,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
