--- a/index.html
+++ b/index.html
@@ -3437,3 +3437,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
