feat: add new feature 2025-01-09

--- a/index.html
+++ b/index.html
@@ -3447,3 +3447,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
