style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -3455,3 +3455,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
