--- a/index.html
+++ b/index.html
@@ -3483,3 +3483,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
