feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -6291,3 +6291,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
