--- a/index.html
+++ b/index.html
@@ -6295,3 +6295,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
