test: add unit tests

--- a/index.html
+++ b/index.html
@@ -6293,3 +6293,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
