--- a/index.html
+++ b/index.html
@@ -3481,3 +3481,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
