--- a/index.html
+++ b/index.html
@@ -3479,3 +3479,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
