--- a/index.html
+++ b/index.html
@@ -3487,3 +3487,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
