--- a/index.html
+++ b/index.html
@@ -3485,3 +3485,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
