chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -6317,3 +6317,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
