docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -6321,3 +6321,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
