--- a/index.html
+++ b/index.html
@@ -6311,3 +6311,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
