--- a/index.html
+++ b/index.html
@@ -6309,3 +6309,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
