--- a/index.html
+++ b/index.html
@@ -6319,3 +6319,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
