chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -6313,3 +6313,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
