--- a/index.html
+++ b/index.html
@@ -3499,3 +3499,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
