--- a/index.html
+++ b/index.html
@@ -6329,3 +6329,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
