--- a/index.html
+++ b/index.html
@@ -6335,3 +6335,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
