fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -6333,3 +6333,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
