--- a/index.html
+++ b/index.html
@@ -6331,3 +6331,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
