--- a/index.html
+++ b/index.html
@@ -3527,3 +3527,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
