--- a/index.html
+++ b/index.html
@@ -3523,3 +3523,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
