--- a/index.html
+++ b/index.html
@@ -6353,3 +6353,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
