docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -6355,3 +6355,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
