--- a/index.html
+++ b/index.html
@@ -6351,3 +6351,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
