docs: update documentation

--- a/index.html
+++ b/index.html
@@ -3561,3 +3561,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
