refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -3563,3 +3563,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
