--- a/index.html
+++ b/index.html
@@ -6411,3 +6411,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
