--- a/index.html
+++ b/index.html
@@ -6401,3 +6401,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
