perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -6407,3 +6407,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
