feat: add new feature 2025-01-17

--- a/index.html
+++ b/index.html
@@ -6409,3 +6409,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
