test: add unit tests

--- a/index.html
+++ b/index.html
@@ -6421,3 +6421,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
