--- a/index.html
+++ b/index.html
@@ -6415,3 +6415,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
