feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -6413,3 +6413,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
