refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -6423,3 +6423,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
