feat: add new feature 2025-01-21

--- a/index.html
+++ b/index.html
@@ -6429,3 +6429,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
