--- a/index.html
+++ b/index.html
@@ -6431,3 +6431,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<script src="app.js"></script>
