--- a/index.html
+++ b/index.html
@@ -6451,3 +6451,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
