--- a/index.html
+++ b/index.html
@@ -6453,3 +6453,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
