--- a/index.html
+++ b/index.html
@@ -6449,3 +6449,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
