--- a/index.html
+++ b/index.html
@@ -6459,3 +6459,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
