docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -6461,3 +6461,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
