--- a/index.html
+++ b/index.html
@@ -6457,3 +6457,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
