--- a/index.html
+++ b/index.html
@@ -6475,3 +6475,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
