--- a/index.html
+++ b/index.html
@@ -6477,3 +6477,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
