fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -6499,3 +6499,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
