feat: add new feature 2025-01-27

--- a/index.html
+++ b/index.html
@@ -6509,3 +6509,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
