--- a/index.html
+++ b/index.html
@@ -6507,3 +6507,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<link rel="stylesheet" href="styles.css">
