--- a/index.html
+++ b/index.html
@@ -6503,3 +6503,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
