--- a/index.html
+++ b/index.html
@@ -6501,3 +6501,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
