--- a/index.html
+++ b/index.html
@@ -6511,3 +6511,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
