refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -6529,3 +6529,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
