--- a/index.html
+++ b/index.html
@@ -6527,3 +6527,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
