--- a/index.html
+++ b/index.html
@@ -6535,3 +6535,5 @@
 <!-- Improved accessibility -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
