--- a/index.html
+++ b/index.html
@@ -6533,3 +6533,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
