refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -6523,3 +6523,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
