docs: update documentation

--- a/index.html
+++ b/index.html
@@ -6531,3 +6531,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
