--- a/index.html
+++ b/index.html
@@ -6545,3 +6545,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
