fix: resolve bug in module

--- a/index.html
+++ b/index.html
@@ -6543,3 +6543,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
