feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -6563,3 +6563,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
