--- a/index.html
+++ b/index.html
@@ -6581,3 +6581,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
