--- a/index.html
+++ b/index.html
@@ -6569,3 +6569,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
