--- a/index.html
+++ b/index.html
@@ -6579,3 +6579,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
