--- a/index.html
+++ b/index.html
@@ -6567,3 +6567,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
