--- a/index.html
+++ b/index.html
@@ -6597,3 +6597,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
