--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Динамическая страница</title>
+    <title>Генератор ссылки</title>
 </head>
 <body>
-    <h1>Введите данные</h1>
+    <h1>Введите данные для генерации ссылки</h1>
     <form id="dataForm">
         <label for="name">Имя:</label>
-        <input type="text" id="name" name="name"><br>
+        <input type="text" id="name" name="name" required><br>
 
         <label for="link">Ссылка на Telegram:</label>
-        <input type="text" id="link" name="link"><br>
+        <input type="url" id="link" name="link" required><br>
 
-        <!-- Добавьте дополнительные поля по мере необходимости -->
+        <!-- Добавьте дополнительные поля -->
         
         <input type="submit" value="Сгенерировать ссылку">
     </form>
@@ -25,33 +25,19 @@
         document.getElementById('dataForm').onsubmit = function(event) {
             event.preventDefault(); // Предотвращаем отправку формы
 
-            const name = document.getElementById('name').value;
-            const link = document.getElementById('link').value;
+            // Получаем значения из полей ввода
+            const name = encodeURIComponent(document.getElementById('name').value);
+            const link = encodeURIComponent(document.getElementById('link').value);
 
-            // Генерируем URL с параметрами
-            const params = new URLSearchParams({ name, link });
-            const url = `${window.location.href}?${params.toString()}`;
+            // Генерируем ссылку с параметрами
+            const generatedUrl = `${window.location.origin}/display.html?name=${name}&link=${link}`;
 
-            // Отображаем данные
+            // Отображаем сгенерированную ссылку
             document.getElementById('output').innerHTML = `
-                <h2>Ваши данные:</h2>
-                <p>Имя: ${name}</p>
-                <p>Ссылка на Telegram: <a href="${link}">${link}</a></p>
-                <p>Сгенерированный URL: <a href="${url}">${url}</a></p>
+                <h2>Ссылка с вашими данными:</h2>
+                <a href="${generatedUrl}" target="_blank">${generatedUrl}</a>
             `;
         };
-
-        // Обработка URL-параметров при загрузке страницы
-        const urlParams = new URLSearchParams(window.location.search);
-        if (urlParams.has('name') && urlParams.has('link')) {
-            const name = urlParams.get('name');
-            const link = urlParams.get('link');
-            document.getElementById('output').innerHTML = `
-                <h2>Ваши данные:</h2>
-                <p>Имя: ${name}</p>
-                <p>Ссылка на Telegram: <a href="${link}">${link}</a></p>
-            `;
-        }
     </script>
 </body>
 </html>
