--- a/index.html
+++ b/index.html
@@ -6599,3 +6599,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
