refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -6631,3 +6631,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
