docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -6629,3 +6629,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
