--- a/index.html
+++ b/index.html
@@ -6621,3 +6621,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
