feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -6625,3 +6625,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
