docs: update documentation

--- a/index.html
+++ b/index.html
@@ -6623,3 +6623,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
