--- a/index.html
+++ b/index.html
@@ -6641,3 +6641,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
