fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -6651,3 +6651,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
