test: add unit tests

--- a/index.html
+++ b/index.html
@@ -6643,3 +6643,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
