--- a/index.html
+++ b/index.html
@@ -6653,3 +6653,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
