--- a/utilities/stream-popup/index.html
+++ b/utilities/stream-popup/index.html
@@ -92,7 +92,7 @@
            ).join('&');
 
            // Генерируем ссылку с рассчитанным временем обновления страницы
-           const generatedUrl = `${window.location.origin}/display.html?${params}&refreshRate=${totalAnimationTime}`;
+           const generatedUrl = `display.html?${params}&refreshRate=${totalAnimationTime}`;
 
            // Отображаем сгенерированную ссылку в виде поля ввода
            document.getElementById('output').innerHTML = `
