fix generated url

--- a/utilities/stream-popup/index.html
+++ b/utilities/stream-popup/index.html
@@ -92,7 +92,7 @@
            ).join('&');
 
            // Генерируем ссылку с рассчитанным временем обновления страницы
-           const generatedUrl = `display.html?${params}&refreshRate=${totalAnimationTime}`;
+           const generatedUrl = `https://mrvi0.github.io/utilities/stream-popup/display.html?${params}&refreshRate=${totalAnimationTime}`;
 
            // Отображаем сгенерированную ссылку в виде поля ввода
            document.getElementById('output').innerHTML = `
