add google tag manager

--- a/utilities/vkhost/index.html
+++ b/utilities/vkhost/index.html
@@ -3,6 +3,12 @@
    <head>
       <meta charset="UTF-8">
       <title>Получить access token</title>
+      <!-- Google Tag Manager -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-TPQNM8CC');</script>
       <link rel="shortcut icon" href="https://vk.com/images/icons/favicons/fav_logo_2x.ico">
       <meta property="og:image" content="https://pp.userapi.com/c849136/v849136341/12ae10/azCBaliVP7E.jpg" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
