added custom css for body

--- a/utilities/stream-popup/index.html
+++ b/utilities/stream-popup/index.html
@@ -15,6 +15,12 @@
     
 </head>
 <body>
+    <style>
+        body { 
+            background-color: #1e1e1e; /* Темный фон */
+            color: #fff;
+        }
+    </style>
     <h1>Генерация блоков</h1>
     <form id="dataForm">
         
