change color for button "delete block"

--- a/utilities/stream-popup/index.html
+++ b/utilities/stream-popup/index.html
@@ -110,7 +110,7 @@
                 <input type="hidden" class="delay" value="" required> <!-- Скрытое поле для задержки -->
                
                 <!-- Кнопка для удаления блока -->
-                <button type='button' class='removeBlock'>Удалить блок</button>`;
+                <button type='button' class='removeBlock' style="background-color: #f15e5e">Удалить блок</button>`;
            
            blocksContainer.appendChild(newBlock);
        };
