update main page

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TPQNM8CC');</script>
+    <link rel="stylesheet" href="src/css/main.css">
     <title>Mr Vi </0dev></title>
 </head>
 <body>
-    
+    <ul>
+        <li><a href="https://mrvi0.github.io/utilities/vkhost/index.html">VK Token Generator</a></li>
+        <li><a href="https://mrvi0.github.io/utilities/stream-qr/index.html">QR Code Generator</a></li>
+        <li><a href="https://mrvi0.github.io/utilities/stream-popup/index.html">Popup Generator</a></li>
+    </ul>
+    <div class="powered-by">
+        <p>Powered by <a href="https://twitch.tv/f_4_t_c_a_t" class="mr-vi" target="_blank">Mr Vi</a></p>
+    </div>
 </body>
 </html>
