change bg color for main page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <title>Mr Vi </0dev></title>
 </head>
 <body>
+    <style>
+        body { 
+            background-color: #1e1e1e; /* Темный фон */
+            color: #fff;
+        }
+    </style>
     <ul>
         <li><a href="https://mrvi0.github.io/utilities/vkhost/index.html">VK Token Generator</a></li>
         <li><a href="https://mrvi0.github.io/utilities/stream-qr/index.html">QR Code Generator</a></li>
