refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -6705,3 +6705,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
