docs: update documentation

--- a/index.html
+++ b/index.html
@@ -6709,3 +6709,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
