feat: add new feature 2025-02-13

--- a/index.html
+++ b/index.html
@@ -6739,3 +6739,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
