fix: handle edge case

--- a/index.html
+++ b/index.html
@@ -6787,3 +6787,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Improved accessibility -->
