chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -6847,3 +6847,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
