feat: add new feature 2025-02-23

--- a/index.html
+++ b/index.html
@@ -6867,3 +6867,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
