docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -6895,3 +6895,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
