feat: add new feature 2025-02-25

--- a/index.html
+++ b/index.html
@@ -6897,3 +6897,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
