perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -6921,3 +6921,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
