feat: add new feature 2025-02-28

--- a/index.html
+++ b/index.html
@@ -6945,3 +6945,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
