refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -6995,3 +6995,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
