test: add unit tests

--- a/index.html
+++ b/index.html
@@ -7061,3 +7061,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
