feat: add new feature 2025-03-09

--- a/index.html
+++ b/index.html
@@ -7087,3 +7087,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
