perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -7099,3 +7099,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
