test: add unit tests

--- a/index.html
+++ b/index.html
@@ -7093,3 +7093,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
