perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -7185,3 +7185,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
