docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -7239,3 +7239,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
