chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -7289,3 +7289,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
