perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -7319,3 +7319,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
