refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -7307,3 +7307,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
