style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -7317,3 +7317,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
