style: improve code formatting

--- a/index.html
+++ b/index.html
@@ -7321,3 +7321,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
