chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -7313,3 +7313,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
