docs: add inline comments

--- a/index.html
+++ b/index.html
@@ -7431,3 +7431,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
