refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -7451,3 +7451,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
