test: add unit tests

--- a/index.html
+++ b/index.html
@@ -7439,3 +7439,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
