fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -7491,3 +7491,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
