docs: update documentation

--- a/index.html
+++ b/index.html
@@ -7487,3 +7487,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
