chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -7555,3 +7555,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
