feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -7559,3 +7559,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
