feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -7571,3 +7571,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
