refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -7593,3 +7593,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
