perf: optimize performance

--- a/index.html
+++ b/index.html
@@ -7625,3 +7625,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
