refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -7657,3 +7657,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
