chore: update dependencies

--- a/index.html
+++ b/index.html
@@ -7665,3 +7665,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
