refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -7679,3 +7679,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
