refactor: improve code structure

--- a/index.html
+++ b/index.html
@@ -7677,3 +7677,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
