docs: update documentation

--- a/index.html
+++ b/index.html
@@ -7669,3 +7669,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
