refactor: simplify logic

--- a/index.html
+++ b/index.html
@@ -7711,3 +7711,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
