feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -7735,3 +7735,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
