feat: enhance user experience

--- a/index.html
+++ b/index.html
@@ -7761,3 +7761,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
