fix: resolve bug in component

--- a/index.html
+++ b/index.html
@@ -7799,3 +7799,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
