--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         <nav class="nav-animate">
             <h2>Навигация:</h2>
             <ul>
-                <li><a href="#">🚀 Утилиты</a></li>
-                <li><a href="#">📚 Персональная Вики</a></li>
-                <li><a href="#">📝 Заметки</a></li>
-                <li><a href="#">💡 Проекты</a></li>
+                <li><a href="/utilities">🚀 Утилиты</a></li>
+                <li><a href="/wiki">📚 Персональная Вики</a></li>
+                <li><a href="/notes">📝 Заметки</a></li>
+                <li><a href="/projects">💡 Проекты</a></li>
                 <!-- Добавь сюда ссылки на твои разделы, когда они появятся -->
                 <!-- Пример: <li><a href="/utils/">🚀 Утилиты</a></li> -->
             </ul>
         </nav>
 
         <footer class="footer-animate">
-            <p>© 2023 Твое Имя или Никнейм. Сделано с ❤️ и кодом.</p>
-            <p><a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank" rel="noopener noreferrer">Мой GitHub</a></p>
+            <p>© 2025 Mr Vi. Сделано с ❤️ и кодом.</p>
+            <p><a href="https://github.com/mrvi0" target="_blank" rel="noopener noreferrer">Мой GitHub</a></p>
              <!-- Замени YOUR_GITHUB_USERNAME на свой ник -->
         </footer>
     </main>
