change project structure

--- a/utilities/stream-popup/index.html
+++ b/utilities/stream-popup/index.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../src/css/main.css">
+    <link rel="stylesheet" href="src/css/main.css">
     <title>Генератор pop-up</title>
     
 </head>
@@ -73,9 +73,9 @@
         </div> 
       </div>
     <div class="powered-by">
-        <p>Powered by <a href="https://twitch.tv/f_4_t_c_a_t" class="mr-vi" target="_blank">Mr Vi</a></p>
+        <p>Powered by <a href="https://t.me/B4DCAT" class="mr-vi" target="_blank">Mr Vi</a></p>
     </div>
     
-   <script src="../../src/js/popup-generator.js"></script>
+   <script src="js/popup-generator.js"></script>
 </body>
 </html>
