--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя Стартовая Страница</title>
+    <title></B4DCAT></title>
     <link rel="stylesheet" href="assets/css/landing.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
 
         <footer class="footer-animate">
             <p>© 2025 Mr Vi. Сделано с ❤️ и кодом.</p>
-            <p><a href="https://github.com/mrvi0" target="_blank" rel="noopener noreferrer">Мой GitHub</a></p>
+            <p><a href="https://github.com/mrvi0" target="_blank" rel="noopener noreferrer">GitHub</a></p>
              <!-- Замени YOUR_GITHUB_USERNAME на свой ник -->
         </footer>
     </main>
